--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/command-t"]
 	path = bundle/command-t
 	url = git://git.wincent.com/command-t.git
+[submodule "bundle/vim-pep8"]
+	path = bundle/vim-pep8
+	url = https://github.com/nvie/vim-pep8.git
