--- a/.gitmodules
+++ b/.gitmodules
@@ -54,7 +54,7 @@
 	url = http://github.com/sjl/gundo.vim.git
 [submodule "bundle/command-t"]
 	path = bundle/command-t
-	url = git://git.wincent.com/command-t.git
+	url = https://github.com/wincent/Command-T.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
