--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab.git
+[submodule "bundle/vim-solarized"]
+	path = bundle/vim-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
