--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/vim-solarized"]
 	path = bundle/vim-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "bundle/vim-peepopen"]
+	path = bundle/vim-peepopen
+	url = https://github.com/shemerey/vim-peepopen.git
