Remove unused files and dirs

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 tags
 *~
 *.swp
-yankring_history_v2.txt
 .VimballRecord
-undofiles/*
-projects/*
-plugin/*
-update-plugins.sh
 bundle/
+!bundle/neobundle.vim
